--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Animate -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/lightbox.min.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -610,14 +611,14 @@
           <div class="section_header_sub"></div>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn"><a href="assets/img/our_works/big_img/1.png"><img class="preview" src="assets/img/our_works/1.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s"><a href="assets/img/our_works/big_img/2.png"><img class="preview" src="assets/img/our_works/2.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s"><a href="assets/img/our_works/big_img/3.png"><img class="preview" src="assets/img/our_works/3.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s"><a href="assets/img/our_works/big_img/4.png"><img class="preview" src="assets/img/our_works/4.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s"><a href="assets/img/our_works/big_img/5.png"><img class="preview" src="assets/img/our_works/5.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s"><a href="assets/img/our_works/big_img/6.png"><img class="preview" src="assets/img/our_works/6.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s"><a href="assets/img/our_works/big_img/7.png"><img class="preview" src="assets/img/our_works/7.png" alt="window"></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s"><a href="assets/img/our_works/big_img/8.png"><img class="preview" src="assets/img/our_works/8.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/1.png"><img class="preview" src="assets/img/our_works/1.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/2.png"><img class="preview" src="assets/img/our_works/2.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/3.png"><img class="preview" src="assets/img/our_works/3.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/4.png"><img class="preview" src="assets/img/our_works/4.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/5.png"><img class="preview" src="assets/img/our_works/5.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/6.png"><img class="preview" src="assets/img/our_works/6.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/7.png"><img class="preview" src="assets/img/our_works/7.png" alt="window"></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s"><a data-lightbox="ourworks" href="assets/img/our_works/big_img/8.png"><img class="preview" src="assets/img/our_works/8.png" alt="window"></a></div>
         </div>
       </div>
     </section>
@@ -918,6 +919,7 @@
 
     <!-- Add slick.js -->
     <script src="start.js"></script>
+    <script src="js/lightbox-plus-jquery.js"></script>
     <!-- Initialize modal, sliders -->
 
   </body>
