--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Animate -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/lightbox.min.css" rel="stylesheet" />
+    <link href="dist/css/lightbox.min.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -919,7 +919,7 @@
 
     <!-- Add slick.js -->
     <script src="start.js"></script>
-    <script src="js/lightbox-plus-jquery.js"></script>
+    <script src="dist/js/lightbox-plus-jquery.js"></script>
     <!-- Initialize modal, sliders -->
 
   </body>
